ajustando bugs finais