@@ -9,7 +9,6 @@ import org.springframework.security.config.annotation.authentication.configurati
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -33,35 +32,45 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        return http
-                .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+        http
+                .cors()
+                .and()
+                .csrf().disable()
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .exceptionHandling(exceptions -> exceptions.authenticationEntryPoint(jwtAuthenticationEntryPoint))
                 .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers("/auth/**", "/h2-console/**", "/swagger-ui/**", "/v3/api-docs/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/coupons/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/institutions/**").permitAll()
                         // Institution Courses permissions
-                        .requestMatchers(HttpMethod.POST, "/api/institution-courses", "/institution-courses").hasAnyRole("INSTITUTION_ADMIN", "INSTITUTION_STAFF")
-                        .requestMatchers(HttpMethod.GET, "/api/institution-courses/**", "/institution-courses/**").hasAnyRole("INSTITUTION_ADMIN", "INSTITUTION_STAFF", "USER")
-                        .requestMatchers(HttpMethod.PUT, "/api/institution-courses/**", "/institution-courses/**").hasAnyRole("INSTITUTION_ADMIN", "INSTITUTION_STAFF")
-                        .requestMatchers(HttpMethod.DELETE, "/api/institution-courses/**", "/institution-courses/**").hasRole("INSTITUTION_ADMIN")
-                        .anyRequest().authenticated()
-                )
+                        .requestMatchers(HttpMethod.POST, "/api/institution-courses", "/institution-courses")
+                        .hasAnyRole("INSTITUTION_ADMIN", "INSTITUTION_STAFF")
+                        .requestMatchers(HttpMethod.GET, "/api/institution-courses/**", "/institution-courses/**")
+                        .hasAnyRole("INSTITUTION_ADMIN", "INSTITUTION_STAFF", "USER")
+                        .requestMatchers(HttpMethod.PUT, "/api/institution-courses/**", "/institution-courses/**")
+                        .hasAnyRole("INSTITUTION_ADMIN", "INSTITUTION_STAFF")
+                        .requestMatchers(HttpMethod.DELETE, "/api/institution-courses/**", "/institution-courses/**")
+                        .hasRole("INSTITUTION_ADMIN")
+                        .anyRequest().authenticated())
                 .headers(headers -> headers.frameOptions().sameOrigin())
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-                .build();
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+        return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
+
+        configuration.setAllowedOrigins(List.of(
+                "https://reconnect-navy.vercel.app",
+                "http://localhost:4200",
+                "http://localhost:8100",
+                "http://localhost:3000"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Auth-Token"));
-        configuration.setExposedHeaders(List.of("X-Auth-Token"));
-        configuration.setAllowCredentials(false);
+        configuration.setAllowedHeaders(Arrays.asList("*")); // Permite todos os headers
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "X-Auth-Token", "Content-Type"));
+        configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -75,7 +84,8 @@ public class SecurityConfig {
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration)
+            throws Exception {
         return authenticationConfiguration.getAuthenticationManager();
     }
 }
